--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "developer-task-health-bondhu",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": "14.17.1"
+  },
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
